
[package]
name = "error"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql_parser = { path = "../parser/mysql" }
mysql_protocol = { path = "../protocol/mysql", package = "mysql_protocol" }
rocket = "0.5.0-rc.1"
thiserror = "1.0"
