[package]
name = "http"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
config = { path = "../app/config" }
once_cell = "1.10.0"
pisa_error = { path = "../error", package = "error" }
pisa_metrics = { path = "../app/metrics", package = "metrics" }
serde = { version = "1.0.126", features = ["derive"] }
server = { path = "../app/server" }
ver = { package = "version", path = "../version" }
axum = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.9"
