
[package]
name = "sql_parser"
version = "0.1.0"
authors = ["wujiandong@sphere-ex.com"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[build-dependencies]
mysql_parser = { path = "./mysql" }

[dependencies]
mysql_parser = { path = "./mysql" }
