[package]
name = "config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
reqwest = { version = "0.11.10", features = ["blocking", "json", "native-tls-vendored"] }
clap = { version = "4", features = ["env"] }
