[package]
name = "server"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config" }
proxy = { path = "../../proxy" }
runtime_mysql = { path = "../../runtime/mysql" }
runtime_shardingsphereproxy = { path = "../../runtime/shardingsphereproxy" }