[package]
name = "pisa-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "proxy"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
futures = { version = "0.3", default-features = false }
num_cpus = "1.0"
tokio = { version = "1.0.0", features = ["full", "tracing"] }
tokio-util = { version = "0.6.7", features = ["full"] }
tokio-stream = { version = "0.1" }
tracing = "0.1.13"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = "0.2.2"
async-std = { version = "1.9.0" }
pprof = { version = "0.4.4", features = ["protobuf", "flamegraph"] }
serde = { version = "1.0.126", features = ["derive"] }
warp = { version = "0.3" }
bytes = "1"
server = {path = "../../app/server"}
http = {path = "../../http"}
proxy = {path = "../../proxy"}
config = {path = "../../app/config"}
pisa_metrics = {path = "../../app/metrics", package = "metrics"}

