[package]
name = "pisa-proxy"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "proxy"
path = "src/main.rs"


#[build-dependencies]
#anyhow = { version = "1.0", default-features = false }
#vergen = { version = "8.0.0-beta.0", features =  ["build", "git", "gitcl"] }


[dependencies]
async-std = { version = "1.9.0" }
bytes = "1"
chrono = "0.4"
config = { path = "../../app/config" }
futures = { version = "0.3", default-features = false }
http = { path = "../../http" }
num_cpus = "1.0"
pisa_metrics = { path = "../../app/metrics", package = "metrics" }
pprof = { version = "0.4.4", features = ["protobuf", "flamegraph"] }
proxy = { path = "../../proxy" }
serde = { version = "1.0.126", features = ["derive"] }
server = { path = "../../app/server" }
tokio = { version = "1.0.0", features = ["full", "tracing"] }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.6.7", features = ["full"] }
tracing = "0.1.37"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = "0.3.9"
warp = { version = "0.3" }
vergen = "7.5.0"

