
[package]
name = "mysql_protocol"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
byteorder = "1.4.3"
bytes = "1"
chrono = "0.4.20"
conn_pool = { path = "../../proxy/pool" }
futures = "0.3.5"
iota = "0.2"
lazy_static = "1.4.0"
num-derive = "0.3"
num-traits = "0.2"
openssl = "0.10"
openssl-sys = "0.9"
pin-project = "1.0.10"
protocol_codegen = { path = "../codegen" }
rand = "0.8"
regex = "1"
rsa = "0.6.0"
rust-crypto = "0.2.36"
rustls-pemfile = "1.0.0"
sha1 = "0.10.1"
thiserror = "1.0"
tokio = { version = "1.17.0", features = ["full", "tracing"] }
tokio-native-tls = "0.3.0"
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7.0", features = ["full"] }
tracing = "0.1.13"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = "0.3.9"
