[package]
name = "loadbalance"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.133", default-features = false, features = ["derive"] }
serde_derive = "1.0"
chrono = "0.4"
rand = "0.8"
rand_distr = "0.4.3"
rand_core = "0.6.0"
endpoint = {path = "../endpoint"}
strategy = {path = "../../proxy/strategy"}