[package]
name = "strategy"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.56"
chrono = "0.4"
conn_pool = { path = "../../proxy/pool" }
crossbeam-channel = "0.3"
endpoint = { path = "../endpoint" }
futures = "0.3.5"
loadbalance = { path = "../loadbalance" }
mysql_protocol = { path = "../../protocol/mysql", package = "mysql_protocol" }
parking_lot = "0.12.0"
pisa_error = { path = "../../error", package = "error" }
regex = "1"
serde = { version = "1.0.133", default-features = false, features = ["derive"] }
serde_derive = "1.0"
tokio = { version = "1.0.0", features = ["full", "tracing"] }
tokio-scoped = "0.2.0"
lazy_static = "1.4.0"
tracing = "0.1.13"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = "0.3.9"
mysql_parser = { path = "../../parser/mysql" }
indexmap = "1.9.1"
aho-corasick = "0.7.19"
itertools = "0.10.4"
thiserror = "1.0"
crc32fast = "1.3.2"
