[package]
name = "runtime_mysql"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
byteorder = "0.5.3"
bytes = "1"
common = { path = "../common" }
conn_pool = { path = "../../proxy/pool" }
endpoint = { path = "../../proxy/endpoint" }
futures = "0.3.5"
iota = "0.2"
loadbalance = { path = "../../proxy/loadbalance" }
mysql_parser = { path = "../../parser/mysql" }
mysql_protocol = { path = "../../protocol/mysql", package = "mysql_protocol" }
once_cell = "1.10.0"
parking_lot = "0.12.0"
pisa_error = { path = "../../error", package = "error" }
plugin = { path = "../../plugin" }
proxy = { path = "../../proxy" }
rocket_prometheus = "0.10.0-rc.1"
serde = { version = "1.0.133", default-features = false, features = ["derive"] }
serde_derive = "1.0"
strategy = { path = "../../proxy/strategy" }
thiserror = "1.0"
tokio = { version = "1.18.0", features = ["full", "tracing"] }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7.0", features = ["full"] }
tracing = "0.1.13"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = "0.3.9"
tower = { version = "0.4.13" }
#mysql-macro = { path = "../macros" }